# stm32_meson_blinky

./: README.md  meson.build  stm32f401xx.cross  stm32g431xx.cross  stm32l0xx.cross
src/: main.c  meson.build
src/linkerscripts/: STM32G431RBTX_FLASH.ld  stm32f40xx_flash.ld  stm32l0xx_flash.ld
subprojects/: .gitignore  cmsis_core.wrap  cmsis_device_f4.wrap  cmsis_device_g4.wrap  cmsis_device_l0.wrap  stm32f4xx_hal_driver.wrap  stm32g4xx_hal_driver.wrap  stm32l0xx_hal_driver.wrap
subprojects/packagefiles/cmsis_core/: meson.build
subprojects/packagefiles/cmsis_device/: meson.build
subprojects/packagefiles/stm32_hal_driver/: hal_conf_template_configurator.py  meson.build
